fix: spacing on each word

--- a/style.css
+++ b/style.css
@@ -337,4 +337,7 @@ section {
     display: flex;
     text-align: initial;
     flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
 }
